  * debian/control: Slightly bump the C/R: for -common; it's a pointless delta
    to Ubuntu and it doesn't hurt us.
  * debian/cupsys-bsd.postinst: Symlink cupsys-bsd's doc directory to
    cupsys-common's, not cupsys', since the latter is not a dependency.
  * debian/control: Demote cups-pdf from Recommends: to Suggests: to match the
    semantics (apt installs recommends by default now).

 -- Kenshi Muto <kmuto@debian.org>  Fri, 30 Nov 2007 17:30:39 +0100

cupsys (1.3.4-1) unstable; urgency=high

  * New upstream release.
    - Fixes CVE-2007-4351
      IPP Tags Memory Corruption Vulnerability (closes: #448866)

  [ Martin Pitt ]
  * debian/cupsys.postinst: Drop ancient code to remove root from group
    lpadmin.

  [ Kenshi Muto ]
  * Debconf translation
    - Finnish (closes: #446740)

 -- Kenshi Muto <kmuto@debian.org>  Fri, 02 Nov 2007 21:32:29 +0900

cupsys (1.3.2-1) unstable; urgency=low

  * New upstream bug fix release.
    - Fixes web interface for many browsers. (STR#2472, Closes: #440589)
  * Remove str2488-fix-localedir.dpatch, str2505_localize.dpatch,
    str2508-dont_kill_edit-config.tmpl.dpatch: Fixed upstream.

 -- Martin Pitt <mpitt@debian.org>  Tue, 18 Sep 2007 08:15:17 +0200

cupsys (1.3.0-4) unstable; urgency=low

  * Install PO files again, but this time under /usr/share/cups/locale. cups
    has its own crazy PO file parser.
  * Add debian/patches/str2488-fix-localedir.dpatch: Make the --localedir
    configure option actually work (taken from upstream SVN, STR#2488)
  * debian/rules: Add --enable-gssapi to ensure that the package is built with
    Kerberos support.
  * debian/rules: Use -Wl,--as-needed linker flag. This drops a few
    unnecessary dependencies and should make checklib much happier.
  * Add debian/patches/str2508-dont_kill_edit-config.tmpl.dpatch: Do not kill
    edit-config.tmpl on distclean. Forwarded upstream as STR#2508.
    (Closes: #441697)
  * Add debian/patches/str2505_localize.dpatch: Fix localization of web