@@ -19,8 +19,8 @@ _Description: Do you want CUPS to print unknown jobs as raw jobs?
 
 Template: cupsys/backend
 Type: multiselect
-__Choices: ipp, lpd, parallel, scsi, serial, socket, usb, snmp
-Default: ipp, lpd, parallel, scsi, serial, socket, usb, snmp
+__Choices: ipp, lpd, parallel, scsi, serial, socket, usb, snmp, dnssd
+Default: ipp, lpd, parallel, scsi, serial, socket, usb, snmp, dnssd
 _Description: Printer communication backends:
  CUPS uses backend programs to communicate with the printer device or port.
  .
